model_training/utils/.nfs0000000f001e83d400000901
  File "/home/master/wzheng/projects/model_training/utils/job_duration_distribution_with_stats.py", line 101
    plot_triplet_bar(stats_2, "Min / Avg / Max Runtime (��4 hours)", "runtime_triplet_bar_long.png")
                                                               ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa1 in position 25: invalid start byte
